@@ -1,7 +1,9 @@
 Summary of important user-visible changes for instrument-control 0.5.0+
 -------------------------------------------------------------------
 
-  ** API: added new spi object and functions
+  ** SPI: added new spi object and functions
+
+  ** TCP: added tcpclient, depeciated tcpip
 
 Summary of important user-visible changes for instrument-control 0.5.0
 -------------------------------------------------------------------
